# ProteinDOFparser

./: .gitignore  CMakeLists.txt  README.md
ProteinDOFparser/: ArgParser.cpp  ArgParser.h  Atom.cpp  Atom.h  AtomGroup.cpp  AtomGroup.h  Chain.cpp  Chain.h  ChainGroup.cpp  ChainGroup.h  DOFMethod.cpp  DOFMethod.h  DOFfileParser.cpp  DOFfileParser.h  EnergyFunctionCalculator.cpp  EnergyFunctionCalculator.h  EnergyScoreCalculator.cpp  EnergyScoreCalculator.h  EnergyScoreFunction.cpp  EnergyScoreFunction.h  Essemble.cpp  Essemble.h  FoldMap.cpp  FoldMap.h  GMXfileParser.cpp  GMXfileParser.h  GROfileParser.cpp  GROfileParser.h  Group.cpp  Group.h  IOParser.cpp  IOParser.h  Manipulator.cpp  Manipulator.h  MonteCarloEngine.cpp  MonteCarloEngine.h  PDBfileParser.cpp  PDBfileParser.h  Parameter.h  Parmeter.cpp  (+28 more)
ProteinDOFparser/app/: CMakeLists.txt  DOF2pdb.cpp  pdb2DOF.cpp
StarUML/: ProteinDOFparser.mdj  Untitled.mdj
alphafold_data/: protein.py  residue_constants.py
test_data/mmcif/: 7wu5.cif
test_data/select_file/: select_atoms.txt
